Unified storage backend Apply, quota gating on own backend, demo UID pinning, pages browser polish
Storage backend (station + instance)
- Collapse PUT /backend and POST /migrate into POST /backend/apply: probes
  the target, copies bytes, then atomically flips the override row. No way
  to land in a half-migrated state where the config points at one backend
  and the bytes still live on another.
- LOCAL request variant migrates bytes back to the instance default and
  drops the override row.
- New probe-config dry-run endpoint so "Verbindung testen" can validate
  the in-form payload without writing.
- Fix HTTP status on probe + apply responses (was returning 400 on success).
- Cast :before / :station_id in StorageBackendAuditRepository.findAll so
  Postgres can determine parameter types for nullable filters.
- Surface usesOwnBackend on /storage/usage. Station with own backend has
  no instance quota - checkQuota, per-file, per-image, and warning-threshold
  logic all short-circuit, and the frontend hides quota bars / shows an
  "Eigenes Backend" badge.

Storage backend forms
- Per-field hints + inline protocol assertions (S3 endpoint must include
  scheme; SMB/SFTP host must not). PasswordInput for masked secrets.
- ToggleSwitch between password and private key for SFTP, with
  TextAreaInput for the key.

Demo data
- Static UIDs (UUID v3, name-based) for the admin account, all station
  members, partner / Nachbarstadt accounts, and FF Musterstadt members so
  demo data does not accumulate orphan storage paths across restarts.
- Remove legacy AVATARS and IMAGES storage categories.

Pages file browser
- Pagination (10/20/50/100 per page, persisted in localStorage).
- Off-by-default multi-select toggle with shift-click range selection.
- Bulk delete + kebab menu (Edit / Delete) per file.
- New DELETE /pages/files/{fileId} backend route.
- Extract PageFilesPagination, PageFilePreviewModal, PageFileEditModal,
  PageFilesBulkModals, PageFilesFolderTagModals into sub-comp